# aoc22

./: .gitignore
01/: max_total_cals.cpp  top_three_total_cals.cpp
02/: score.cpp  score_with_strategy.cpp
03/: sum_of_priorities  sum_of_priorities.cpp  sum_of_priorities_grouped.cpp
04/: num_pairs_contained.cpp  num_pairs_contained_ranges.cpp  num_pairs_overlap.cpp
05/: crates_9001.cpp  crates_on_top.cpp
06/: marker_14.cpp  marker_4.cpp
07/: sum_sizes.cpp  which_to_delete.cpp
08/: is_visible.cpp  scenic_score.cpp
09/: simulate.cpp  simulate_long_rope.cpp
10/: draw.cpp  signal_strengths.cpp
11/: monkey_business.cpp  monkey_business_modulo.cpp
12/: all_sources.cpp  num_steps.cpp
13/: decoder_key.cpp  distress.cpp
14/: floor_sand.cpp  sand.cpp
15/: beacon_exclusion.cpp  tuning_frequency.cpp
16/: CMakeLists.txt  agent.h  max_flow.cpp  multiagent_max_flow.cpp  notes.md  state.h  test_state.cpp  valve.h  world.cpp  world.h
16_py/: Multi-Agent.ipynb  multiagent.py
17/: tetris.cpp
18/: exterior_surface_area.cpp  input_4x4_hollow_cube  print.cpp  surface_area.cpp
20/: grove.cpp
21/: root.cpp
22/: move.cpp
